--- a/school/elec_313/lab9/tex/report.tex
+++ b/school/elec_313/lab9/tex/report.tex
@@ -110,7 +110,7 @@ The following procedure was used to evaluate the transistor amplifier of Figure~
 
 As seen in Table~\ref{tab:amp_bypass}, the small signal voltage gain $A_V$ increased once the emitter bypass capacitor was added, even though it had relatively insignificant impact to the DC voltages of each terminal. The DC voltages shouldn’t change because the capacitor that was added is ideally an open circuit. But the emitter bypass resistor has a significant impact to the AC analysis because it is seen as a closed circuit and allows the $I_E$ to pass through. As seen in Eq~\ref{eq:gm2}, the addition of the emitter bypass capacitor, reduced the denominator of the $A_V$ Eq~\ref{eq:Av1}, thus increasing gain.
 
-Table~\ref{tab:gains} shows the percent differences of the small signal gains along with input and output impedances ($R_i$ and $R_o$) both with and without the bypass capacitor. The 5.7 percent difference between the $A_V$ (no bypass) is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (from the in the pre-lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage drop between the \SI{12}{VDC} input and terminal C is smaller. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ with the bypass emitter. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, when calculating the theoretical votage gain, $r_o$ is assumed to be infinite (i.e. an open circuit), which is not entirely true. %<Not sure what you were saying>The resistance of $r_o$ in parallel with $R_C$ this would actually have been slightly less than the $R_o$ used in the theoretical calculations.
+Table~\ref{tab:gains} shows the percent differences of the small signal gains along with input and output impedances ($R_i$ and $R_o$) both with and without the bypass capacitor. The 5.7 percent difference between the $A_V$ (no bypass) is caused from a combination of using nominal instead of measured resistance values, and the assumptions that $\beta$ was assumed to be 150 and  $I_{CQ}$ was assumed to be \SI{3}{mA} (from the pre-lab). $I_{CQ}$ was probably less than \SI{3}{mA} because the voltage drop between the \SI{12}{VDC} input and terminal C is smaller. There is significant percent difference between the theoretical $A_V$ versus the measured $A_V$ with the bypass emitter. Eq~\ref{eq:gm2} shows that the calculated $A_V$ is affected more by $I_{CQ}$. Also, when calculating the theoretical votage gain, $r_o$ is assumed to be infinite (i.e. an open circuit), which is not entirely true. %<Not sure what you were saying>The resistance of $r_o$ in parallel with $R_C$ this would actually have been slightly less than the $R_o$ used in the theoretical calculations.
 
 %$R_i$ and $R_o$ are relatively close and the small percent differences are probably because we took the nominal resistor values instead of the measured resistor values. Experience has shown that resistors are usually slightly less than their nominal value.
 % Table~\ref{tab:gains} shows the $V_{OC}$ recorded during step 9. It is less than \SI{500}{mV} probably because of “noise” could have affected the output reading. The table also shows the $V_{clip}$, which is the point at which the output voltage began to clip (when the transistor is at saturation).
