--- a/school/elec_424/memristor/main.bib
+++ b/school/elec_424/memristor/main.bib
@@ -47,7 +47,6 @@
   publisher={IEEE}
 }
 
-
 @article{argall1968,
   doi = {10.1016/0038-1101(68)90092-0},
   url = {http://dx.doi.org/10.1016/0038-1101(68)90092-0},
@@ -60,4 +59,18 @@
   author = {F. Argall},
   title = {Switching phenomena in titanium oxide thin films},
   journal = {Solid-State Electronics}
+}
+
+@article{mazumder2012,
+  doi = {10.1109/jproc.2012.2190812},
+  url = {http://dx.doi.org/10.1109/JPROC.2012.2190812},
+  year  = {2012},
+  month = {jun},
+  publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
+  volume = {100},
+  number = {6},
+  pages = {1911--1919},
+  author = {Pinaki Mazumder and Sung Mo Kang and Rainer Waser},
+  title = {Memristors: Devices,  Models,  and Applications [Scanning the Issue]},
+  journal = {Proc. {IEEE}}
 }
