Adding a few more citations

--- a/school/elec_424/memristor/main.bib
+++ b/school/elec_424/memristor/main.bib
@@ -28,7 +28,7 @@
 @article{strukov2008missing,
   title={The missing memristor found},
   author={Strukov, Dmitri B and Snider, Gregory S and Stewart, Duncan R and Williams, R Stanley},
-  journal={nature},
+  journal={Nature},
   volume={453},
   number={7191},
   pages={80--83},
@@ -73,4 +73,39 @@
   author = {Pinaki Mazumder and Sung Mo Kang and Rainer Waser},
   title = {Memristors: Devices,  Models,  and Applications [Scanning the Issue]},
   journal = {Proc. {IEEE}}
+}
+
+@misc{snider2008molecular,
+  title={Molecular-junction-nanowire-crossbar-based neural network},
+  author={Snider, G.},
+  url={http://www.google.com/patents/US7359888},
+  year={2008},
+  month=apr # "~15",
+  publisher={Google Patents},
+  note={US Patent 7,359,888}
+}
+
+@article{heath1998,
+  doi = {10.1126/science.280.5370.1716},
+  url = {http://dx.doi.org/10.1126/science.280.5370.1716},
+  year  = {1998},
+  month = {jun},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {280},
+  number = {5370},
+  pages = {1716--1721},
+  author = {J. R. Heath},
+  title = {A Defect-Tolerant Computer Architecture: Opportunities for Nanotechnology},
+  journal = {Science}
+}
+
+@article{Jabr2012,
+  doi = {10.1038/nature.2012.11811},
+  url = {http://dx.doi.org/10.1038/nature.2012.11811},
+  year  = {2012},
+  month = {nov},
+  publisher = {Nature Publishing Group},
+  author = {Ferris Jabr},
+  title = {How brainless slime molds redefine intelligence},
+  journal = {Nature}
 }
