--- a/school/elec_424/memristor/main.bib
+++ b/school/elec_424/memristor/main.bib
@@ -99,7 +99,7 @@
   journal = {Science}
 }
 
-@article{Jabr2012,
+@article{jabr2012,
   doi = {10.1038/nature.2012.11811},
   url = {http://dx.doi.org/10.1038/nature.2012.11811},
   year  = {2012},
