--- a/school/elec_424/memristor/main.bib
+++ b/school/elec_424/memristor/main.bib
@@ -109,3 +109,80 @@
   title = {How brainless slime molds redefine intelligence},
   journal = {Nature}
 }
+
+@article{hellemans_2014,
+	doi = {10.1109/mspec.2014.6964916},
+	url = {http://dx.doi.org/10.1109/mspec.2014.6964916},
+	year = 2014,
+	month = {dec},
+	publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
+	volume = {51},
+	number = {12},
+	pages = {18--18},
+	author = {Alexander Hellemans},
+	title = {Six-state memristor opens door to weird computing [News]},
+	journal = {{IEEE} Spectr.}
+}
+
+@article{pershin2009,
+  doi = {10.1103/physreve.80.021926},
+  url = {http://dx.doi.org/10.1103/PhysRevE.80.021926},
+  year  = {2009},
+  month = {aug},
+  publisher = {American Physical Society ({APS})},
+  volume = {80},
+  number = {2},
+  author = {Yuriy V. Pershin and Steven La Fontaine and Massimiliano Di Ventra},
+  title = {Memristive model of amoeba learning},
+  journal = {Physical Review E}
+}
+
+@article{saigusa2008,
+  doi = {10.1103/physrevlett.100.018101},
+  url = {http://dx.doi.org/10.1103/PhysRevLett.100.018101},
+  year  = {2008},
+  month = {jan},
+  publisher = {American Physical Society ({APS})},
+  volume = {100},
+  number = {1},
+  author = {Tetsu Saigusa and Atsushi Tero and Toshiyuki Nakagaki and Yoshiki Kuramoto},
+  title = {Amoebae Anticipate Periodic Events},
+  journal = {Phys. Rev. Lett.}
+}
+
+@article{nakagaki2000intelligence,
+  title={Intelligence: Maze-solving by an amoeboid organism},
+  author={Nakagaki, Toshiyuki and Yamada, Hiroyasu and T{\'o}th, {\'A}gota},
+  journal={Nature},
+  volume={407},
+  number={6803},
+  pages={470--470},
+  year={2000},
+  publisher={Nature Publishing Group}
+}
+
+@article{pershin2011,
+  doi = {10.1103/physreve.84.046703},
+  url = {http://dx.doi.org/10.1103/PhysRevE.84.046703},
+  year  = {2011},
+  month = {oct},
+  publisher = {American Physical Society ({APS})},
+  volume = {84},
+  number = {4},
+  author = {Yuriy V. Pershin and Massimiliano Di Ventra},
+  title = {Solving mazes with memristors: A massively parallel approach},
+  journal = {Physical Review E}
+}
+
+@article{DBLP:journals/corr/abs-1110-2074,
+  author    = {Martin Klimo and
+               Ondrej Such},
+  title     = {Memristors can implement fuzzy logic},
+  journal   = {CoRR},
+  volume    = {abs/1110.2074},
+  year      = {2011},
+  url       = {http://arxiv.org/abs/1110.2074},
+  timestamp = {Mon, 05 Dec 2011 18:05:19 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1110-2074},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
