--- a/school/elec_424/memristor/main.tex
+++ b/school/elec_424/memristor/main.tex
@@ -12,48 +12,65 @@
 %\end{abstract}
 
 \section{Introduction}
-Electronics textbooks list three passive components: resistors,
-capacitors, and inductors.  Resistors relate voltage to current,
-capacitors relate voltage to charge, and inductors relate charge to
-magnetic flux.  Noting the symmetry (no component relating magnetic
-flux to current), in 1971 Leon Chua published a mathematical
-proof\cite{chua1971} that such a device should be possible.
+Electronics textbooks list three passive components: resistors, capacitors, and
+inductors.  Resistors relate voltage to current, capacitors relate voltage to
+charge, and inductors relate charge to magnetic flux.  Noting the symmetry (no
+component relating magnetic flux to current), in 1971 Leon Chua published a
+mathematical proof \cite{chua1971} that such a device should be possible.
 
-As a function of time, the device gives a flux-charge relationship
-similar to the current-voltage relationship of a resistor (i.e. its
-resistance changes according to the charge passed through it).  The
-device remembers it's history, which is where the term ``memristor''
-comes from.  Active devices simulating the behavior had existed, but
-the first passive version came from HP 37 years
-later.\cite{strukov2008missing}
+As a function of time, the device gives a flux-charge relationship similar to
+the current-voltage relationship of a resistor (i.e. its resistance changes
+according to the charge passed through it).  The device remembers it's history,
+which is where the term ``memristor'' comes from.  Active devices simulating
+the behavior had existed, but the first passive version came from HP 37 years
+later. \cite{strukov2008missing}
 
-HP's device consisted of two layers of titanium dioxide
-($\mathrm{TiO_2}$), a semiconductor, sandwiched between platinum
-plates with some oxygen atoms removed from one of the layers to make
-it conductive ($\mathrm{TiO_{2-x}}$).  Voltage applied to the platinum
-plates would expand or contract the $\mathrm{TiO_{2-x}}$ layer,
-changing the device's conductivity\cite{williams2008we} (a switch,
-essentially).
+%\section{Implementation}
+%\subsection{Titanium Dioxide}
+HP's device consisted of two layers of titanium dioxide ($\mathrm{TiO_2}$), a
+semiconductor, sandwiched between platinum plates with some oxygen atoms
+removed from one of the layers to make it conductive ($\mathrm{TiO_{2-x}}$).
+Voltage applied to the platinum plates would expand or contract the
+$\mathrm{TiO_{2-x}}$ layer, changing the device's conductivity
+\cite{williams2008we} (a switch, essentially).
 
 \section{Applications}
 
-\subsection{Memory}\label{memory}
-The device HP created was born out of a research group tasked with
-figuring out what to do when transistors could be shrunk no
-further\cite{williams2008we}.  As component sizes shrink aligning
-masks during the die creation becomes more difficult and probability
-of surface defects increase, together reducing
-yield\cite{snider2008molecular}.  The team realized that redundancy
-could be used to combat the reduced yield.  Inspired by another HP
-project, the Teramac\cite{heath1998} massively-parallel computer, the
-cross-board latch would be used: multiple switches are placed between
-an input and output line such that any could trigger a connection.
-Forming an array of these latches created a storage device.
+\subsection{Non-Volatile Memory}\label{memory}
+The device HP created was born out of a research group tasked with figuring out
+what to do when transistors could be shrunk no further \cite{williams2008we}.
+As component sizes shrink aligning masks during the die creation becomes more
+difficult and probability of surface defects increase, together reducing yield
+\cite{snider2008molecular}.  The team realized that redundancy could be used to
+combat the reduced yield.  Inspired by another HP project, the Teramac
+\cite{heath1998} massively-parallel computer, the cross-board latch would be
+used: multiple switches are placed between an input and output line such that
+any could trigger a connection.  Forming an array of these latches created a
+storage device, and since memristors preserve their state no power is required
+to preserve the data.
 
 \subsection{Logic}\label{logic}
-The extension from storage to logic is straightforward.
+The extension from storage to logic is straightforward: for any operation a
+given input will produce the same output, so a table of results can be created
+for a list of inputs.  Memristors can implement logic functions as well; the
+basic NAND gate requires one less component compared to transistors.  Besides
+boolean logic memristors can be used to build the IMPLY conditional (p
+$\Rightarrow $ q) \cite{DBLP:journals/corr/abs-1110-2074} which is useful in implementing fuzzy logic.
 
-\subsection{Artificial Intelligence}\label{ai}
+\subsection{Learning Circuits}\label{ai}
+A 2009 study\cite{pershin2009} showed a simple memristive circuit was able to
+anticipate voltage spikes when a steady pulse train was applied.  The
+experiment was designed to emulate an earlier study \cite{saigusa2008} on
+behavioral intelligence in slime mold.  In it the mold was able to predict
+periodic changes to its environment.  A separate study
+\cite{nakagaki2000intelligence} of the slime mold showed the single-cell
+organisms capable of solving a maze via the shortest path; a network of memristors was later shown capable of the same \cite{pershin2011}.
+
+%\subsection{Base-n Memory}
+%In 2014 physicists at Trinity College Dublin created a memristor able to switch
+%to six discrete states. \cite{hellemans_2014}
+
+\newpage{}
 
 \bibliographystyle{abbrv}
 \bibliography{main}
